<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleAnimation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="move_to_right">Move</string>
    <string name="fade_in_and_out">Fade</string>
    <string name="scale">Scale</string>
    <string name="rotate">Rotate</string>
    <string name="animation_button_text">Object</string>

</resources>